# ChatBot-Offline-Gwen

./: README.md  app.py  pyproject.toml
